# CAS_code

./: .gitconfig  .gitignore  Makefile  distance_sort.cpp  ets_db_construct.cpp  generator.cpp  merge.cpp  my_project_test.cpp  removeN.py  sp_distance.cpp
EDLink/: CMakeLists.txt  ED_links.cpp  ETS_DB.cpp  L_F_convert.cpp  README.md  Readme  RefDB.cc  RefDB.h  a.out  analysis.sh  common.h  compile.sh  etsSolver.cc  etsSolver.h  expl-21.cpp  generator.cpp  optimalSolverLN.h  pseudo_code  ref.fasta  testEtsSolver.cc  testOptimalSolverLN.cc  test_in.txt  test_in2.txt
